# play_service

./: pyproject.toml  settings.toml
app/: main.py
app/api/: user.py
app/core/: app.py  config.py  db.py  exceptions.py
app/databases/: base_db.py  user_db.py
app/models/: user_model.py
app/schemas/: user_schema.py
app/services/: user_service.py
