[tool.poetry]
name = "play-service"
version = "0.1.0"
description = ""
authors = ["yuramishin <robothot@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
dynaconf = "^3.2.10"
asyncpg = "^0.30.0"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
